--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,41 @@
-name: CI Workflow
+# name: CI Workflow
+
+# on:
+#   push:
+#     branches:
+#       - main
+#   pull_request:
+#     branches:
+#       - main
+
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v2
+
+#     - name: Set up Python
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: '3.9'
+
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install pytest streamlit
+
+#     - name: Run tests
+#       run: |
+#         pytest _test.py
+
+
+  
+name: House Prediction CI
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
     branches:
       - main
 
@@ -14,18 +45,17 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
+        python-version: 3.10
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest streamlit
+        pip install -r requirements.txt
 
-    - name: Run tests
+    - name: Run prediction script
       run: |
-        pytest _test.py
+        python src/predictor.py
