--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,4 +58,4 @@ jobs:
 
     - name: Run prediction script
       run: |
-        python src/predictor.py
+        python src/house_price_prediction.py
