House price prediction

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,3 +1,33 @@
+name: House Prediction CI
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+
+    - name: Run prediction script
+      run: |
+        python src/house_price_prediction.py
+
+
+
 # name: CI Workflow
 
 # on:
@@ -31,31 +61,4 @@
 #         pytest _test.py
 
 
-  
-name: House Prediction CI
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  test:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.10
-
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
-
-    - name: Run prediction script
-      run: |
-        python src/house_price_prediction.py
+ 
