--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,6 +1,6 @@
 stages:
   ingest_data:
-    cmd: python src/data_ingestion.py
+    cmd: python main.py
     deps:
       - src/data_ingestion.py
       - data/raw/dataset.csv
@@ -8,34 +8,34 @@ stages:
       - data/raw/dataset.csv
 
   preprocess_data:
-    cmd: python src/data_preprocessing.py
+    cmd: python main.py
     deps:
       - src/data_preprocessing.py
       - data/raw/dataset.csv
     outs:
-      - data/processed/processed.csv
+      - data/processed/preprocessed.csv  # Renamed output file
 
   feature_engineering:
-    cmd: python src/feature_engineering.py
+    cmd: python main.py
     deps:
       - src/feature_engineering.py
-      - data/processed/processed.csv
+      - data/processed/preprocessed.csv  # Changed to the new output file
     outs:
-      - data/processed/processed.csv
+      - data/processed/features.csv  # New output file for feature engineering
 
   train_model:
-    cmd: python src/model_training.py
+    cmd: python main.py
     deps:
       - src/model_training.py
-      - data/processed/processed.csv
+      - data/processed/features.csv  # Changed to new features file
     outs:
       - models/model.pkl
 
   evaluate_model:
-    cmd: python src/model_evaluation.py
+    cmd: python main.py
     deps:
       - src/model_evaluation.py
       - models/model.pkl
-      - data/processed/processed.csv
+      - data/processed/features.csv  # Changed to new features file
     outs:
       - evaluation_results.txt
